buildscript {
    dependencies {
        classpath "org.elasticsearch.gradle:build-tools:7.3.2"
    }
}

plugins {
    id "java"
}


configurations.all {
    resolutionStrategy.force 'org.apache.httpcomponents:httpclient:4.5.10'
    resolutionStrategy.force 'org.apache.httpcomponents:httpcore:4.4.12'
    resolutionStrategy.force 'org.apache.httpcomponents:fluent-hc:4.5.10'
    resolutionStrategy.force 'commons-logging:commons-logging:1.1.1'
}


// apply plugin: 'elasticsearch.testclusters'
apply plugin: 'elasticsearch.esplugin'


esplugin {
    description 'The elasticsearch-apollo-conf-discovery plugin uses the Apollo Configuration to identify the addresses of seed hosts.'
    name 'elasticsearch-apollo-conf-discovery'
    classname 'com.es_plugins.ApolloConfBasedDiscoveryPlugin'
}

group 'com.es-plugins'
version '1.0-SNAPSHOT'

sourceCompatibility = 12
targetCompatibility = 12

repositories {
    mavenCentral()
}

dependencies {
    testCompile group: 'junit', name: 'junit', version: '4.12'
    compile group: 'org.slf4j', name: 'slf4j-api', version: '1.7.28'
    compile group: 'commons-logging', name: 'commons-logging', version: '1.1.1'
    compile group: 'org.apache.httpcomponents', name: 'httpclient', version: '4.5.10'
    compile group: 'org.apache.httpcomponents', name: 'httpcore', version: '4.4.12'
    compile group: 'org.apache.httpcomponents', name: 'fluent-hc', version: '4.5.10'
    compile group: 'org.elasticsearch', name: 'elasticsearch', version: '7.3.2'
    compile group: 'org.apache.commons', name: 'commons-lang3', version: '3.9'
    compile group: 'com.alibaba', name: 'fastjson', version: '1.2.62'
}


licenseFile = rootProject.file('APACHE-LICENSE-2.0.txt')
noticeFile = rootProject.file('NOTICE.txt')
dependencyLicenses.enabled = false
licenseHeaders.enabled = false
thirdPartyAudit.enabled = false
forbiddenApisTest.enabled = false
forbiddenApisMain.enabled = false
loggerUsageCheck.enabled = false
testingConventions.enabled = false
